--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -25,10 +25,11 @@ process.key.oaleave=xcasedemo
 date.format.standard=yyyy-MM-dd hh:MM:ss
 
 #数据库
-spring.datasource.p3.url=jdbc:mysql://172.16.31.43:3306/rbac?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.p3.username=liuxing
-spring.datasource.p3.password=Liuxing009!
-spring.datasource.p3.driver-class-name=com.mysql.jdbc.Driver
+#尾部的数据库名字，配置不配置都可。建议不配置
+spring.datasource.p3.url=jdbc:dm://172.16.14.106:5240/SHEMEBANAN5?comOra=true
+spring.datasource.p3.username=SYSDBA
+spring.datasource.p3.password=SYSDBA
+spring.datasource.p3.driver-class-name=dm.jdbc.driver.DmDriver
 spring.datasource.p3.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.p3.initialSize=2
 spring.datasource.p3.minIdle=2
@@ -41,5 +42,5 @@ spring.datasource.p3.testOnBorrow=true
 spring.datasource.p3.testOnReturn=true
 spring.datasource.p3.poolPreparedStatements=true
 spring.datasource.p3.maxPoolPreparedStatementPerConnectionSize=2
-spring.datasource.p3.filters=stat,wall,log4j
-spring.datasource.p3.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=2000
+spring.datasource.p3.filters=stat,log4j
+##spring.datasource.p3.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=2000
