--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>1.7</java.version>
 		<activiti.version>5.22.0</activiti.version>
 	</properties>
 
@@ -68,9 +68,9 @@
             <artifactId>thymeleaf-extras-springsecurity4</artifactId>
         </dependency>        
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <groupId>dm.jdbc</groupId>
+            <artifactId>Dm7JdbcDriver17</artifactId>
+            <version>7.0</version>
         </dependency>
         <dependency>
 			<groupId>com.chenxing</groupId>
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.0.29</version>
+            <version>1.1.12</version>
         </dependency>        
         <dependency>
             <groupId>org.springframework.cloud</groupId>
