--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -26,7 +26,7 @@ date.format.standard=yyyy-MM-dd hh:MM:ss
 
 #数据库
 #尾部的数据库名字，配置不配置都可。建议不配置
-spring.datasource.p3.url=jdbc:dm://172.16.14.106:5240/SHEMEBANAN5?comOra=true
+spring.datasource.p3.url=jdbc:dm://172.16.14.106:5240?comOra=true
 spring.datasource.p3.username=SYSDBA
 spring.datasource.p3.password=SYSDBA
 spring.datasource.p3.driver-class-name=dm.jdbc.driver.DmDriver
